# computer_vision_with_mediapipe

./: .gitignore  AI.spec  AIVision.spec  Packager.toml  README.md  app.py  download_models.py  ml_applications.py  pyinstaller.spec  pyproject.toml  requirements.txt  styles.css  utils.py
src/cv_mediapipe/: __main__.py  apath.py  app.py  ml_applications.py
src/cv_mediapipe/assets/: styles.css
